// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot 1`] = `
<header>
  <Link
    replace={false}
    to="/"
  >
    <h1>
      Robo Report
    </h1>
  </Link>
  <nav>
    <Link
      replace={false}
      to="/"
    >
      Home
    </Link>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      className="hidden"
      to="/myReports"
    >
      My Reports
    </NavLink>
    <button
      className="sign-in--button"
      onClick={[Function]}
    >
      Sign In
    </button>
  </nav>
</header>
`;

exports[`Header should match the snapshot 2`] = `
<header>
  <Link
    replace={false}
    to="/"
  >
    <h1>
      Robo Report
    </h1>
  </Link>
  <nav>
    <Link
      replace={false}
      to="/"
    >
      Home
    </Link>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      className="display"
      to="/myReports"
    >
      My Reports
    </NavLink>
    <button
      className="sign-in--button"
      onClick={[Function]}
    >
      Sign Out
    </button>
  </nav>
</header>
`;
